# synapse

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: format.yml  lint.yml  publish.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: fs.rs  mod.rs  planner.rs  quiz.rs
src/components/layout/: header.tsx  main-layout.tsx  sidebar.tsx
src/components/ui/: button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  scroll-area.tsx  select.tsx  separator.tsx  tabs.tsx  textarea.tsx
src/features/chat/: index.ts
src/features/chat/components/: chat-view.tsx
src/features/documents/: documents-page.tsx  index.ts
src/features/documents/components/: document-upload.tsx
src/features/planner/: index.ts  planner-page.tsx
src/features/planner/components/: study-calendar.tsx
src/features/quiz/: index.ts  quiz-page.tsx
src/features/quiz/components/: flashcard-view.tsx  quiz-generator.tsx  quiz-view.tsx
src/features/settings/: settings-page.tsx
src/lib/ai/: client.ts  index.ts  models.ts  providers.ts
src/lib/store/: chat-store.ts  index.ts  planner-store.ts  quiz-store.ts  settings-store.ts
src/styles/: globals.css
